--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="notification">Notification</string>
     <string name="settings">Settings</string>
     <string name="statistics">Statistics</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="theory">Theory</string>
+    <string name="exercises">Exercises</string>
 </resources>
