--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,19 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="theory">Theory</string>
     <string name="exercises">Exercises</string>
+    <string name="comp_exercise">Computer exercises</string>
+    <string name="icon_left">Icon left</string>
+    <string name="exercise_1_of_4">Exercise 1/4</string>
+    <string name="icon_right">icon_right</string>
+    <string name="exercises_for_computer_users">Exercises for computer users</string>
+    <string name="timer">Timer</string>
+    <string name="pause">pause</string>
+    <string name="repeat">Repeat</string>
+    <string name="start_btn">Start</string>
+    <string name="welcome_back">Welcome back!</string>
+    <string name="current_program">CURRENT PROGRAM</string>
+    <string name="daily_reminder">Daily reminder</string>
+    <string name="last_name">Last name</string>
+    <string name="first_name">First name</string>
+    <string name="profile">Profile</string>
 </resources>
