--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,19 +1,18 @@
 <resources>
     <string name="app_name">Mon kine de poche</string>
-    <string name="title_home">Home</string>
-    <string name="title_theory">Theory</string>
-    <string name="title_exercises">Exercises</string>
+    <string name="mon_kine_de_poche">MON KINE DE POCHE</string>
     <string name="navigation_drawer_open">open</string>
     <string name="navigation_drawer_close">close</string>
     <string name="notification">Notification</string>
-    <string name="settings">Settings</string>
-    <string name="statistics">Statistics</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <!-- BOTTOM MENU -->
     <string name="theory">Theory</string>
     <string name="exercises">Exercises</string>
     <string name="comp_exercise">Computer exercises</string>
+    <string name="settings">Settings</string>
+    <string name="statistics">Statistics</string>
+
+    <!--COMPUTER EXERCISE FRAGMENT-->
     <string name="icon_left">Icon left</string>
     <string name="exercise_1_of_4">Exercise 1/4</string>
     <string name="icon_right">icon_right</string>
@@ -22,10 +21,20 @@
     <string name="pause">pause</string>
     <string name="repeat">Repeat</string>
     <string name="start_btn">Start</string>
-    <string name="welcome_back">Welcome back!</string>
+
+   !-- HOME FRAGMENT -->
+    <string name="welcome">Welcome !</string>
     <string name="current_program">CURRENT PROGRAM</string>
+
+    <!--SETTING FRAGMENT -->
     <string name="daily_reminder">Daily reminder</string>
     <string name="last_name">Last name</string>
     <string name="first_name">First name</string>
     <string name="profile">Profile</string>
+    <string name="save">Save</string>
+    <string name="home">Home</string>
+    <string name="user_name">User name</string>
+    <string name="trophy">Trophy</string>
+    <string name="update">Update</string>
+
 </resources>
