--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,7 @@
     <string name="user_name">User name</string>
     <string name="trophy">Trophy</string>
     <string name="update">Update</string>
+    <string name="channel_name">notify</string>
+    <string name="channel_description">notification</string>
 
 </resources>
