--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,5 +38,6 @@
     <string name="update">Update</string>
     <string name="channel_name">notify</string>
     <string name="channel_description">notification</string>
+    <string name="notification_message_body">Time to do your exercises!</string>
 
 </resources>
