--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,5 +39,7 @@
     <string name="channel_name">notify</string>
     <string name="channel_description">notification</string>
     <string name="notification_message_body">Time to do your exercises!</string>
+    <string name="log_out">Log out</string>
+    <string name="you_need_to_log_in_first">You need to log in first</string>
 
 </resources>
