--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,5 +41,6 @@
     <string name="notification_message_body">Time to do your exercises!</string>
     <string name="log_out">Log out</string>
     <string name="you_need_to_log_in_first">You need to log in first</string>
+    <string name="description_statistics">The graph shows you the last 4 days, measured in percentage of completed program.</string>
 
 </resources>
