--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,6 @@
     <string name="description_statistics">The graph shows you the last 5 days, measured in percentage of completed program.</string>
     <string name="log_in">Log in</string>
     <string name="exercise_where_ever_you_are">Exercise where ever you are!</string>
+    <string name="done">DONE</string>
 
 </resources>
