added layout for tablet in portrait and landscape mode

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="log_in">Log in</string>
     <string name="exercise_where_ever_you_are">Exercise where ever you are!</string>
     <string name="done">DONE</string>
+    <string name="today_progress_drawer">Today progress:</string>
 
 </resources>
