--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,5 +46,6 @@
     <string name="exercise_where_ever_you_are">Exercise where ever you are!</string>
     <string name="done">DONE</string>
     <string name="today_progress_drawer">Today progress:</string>
+    <string name="trophy_text">God job!  You did all your exercises today!</string>
 
 </resources>
