--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,7 @@
     <string name="done">DONE</string>
     <string name="today_progress_drawer">Today progress:</string>
     <string name="trophy_text">God job!  You did all your exercises today!</string>
+    <string name="why">Why?</string>
+    <string name="how">How?</string>
 
 </resources>
