--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,42 +11,47 @@
     <string name="comp_exercise">Computer exercises</string>
     <string name="settings">Settings</string>
     <string name="statistics">Statistics</string>
+    <string name="home">Home</string>
 
     <!--COMPUTER EXERCISE FRAGMENT-->
     <string name="icon_left">Icon left</string>
-    <string name="exercise_1_of_4">Exercise 1/4</string>
     <string name="icon_right">icon_right</string>
     <string name="exercises_for_computer_users">Exercises for computer users</string>
     <string name="timer">Timer</string>
     <string name="pause">pause</string>
     <string name="repeat">Repeat</string>
     <string name="start_btn">Start</string>
+    <string name="done">DONE</string>
 
-    !-- HOME FRAGMENT -->
+    <!-- HOME FRAGMENT -->
     <string name="welcome">Welcome !</string>
     <string name="current_program">CURRENT PROGRAM</string>
 
     <!--SETTING FRAGMENT -->
     <string name="daily_reminder">Daily reminder</string>
-    <string name="last_name">Last name</string>
-    <string name="first_name">First name</string>
     <string name="profile">Profile</string>
     <string name="save">Save</string>
-    <string name="home">Home</string>
     <string name="user_name">User name</string>
-    <string name="trophy">Trophy</string>
     <string name="update">Update</string>
+    <string name="log_out">Log out</string>
+
+    <!--EXERCISE FRAGMENT-->
+    <string name="trophy">Trophy</string>
+    <string name="trophy_text">God job!  You did all your exercises today!</string>
+
+    <!--STATISTICS FRAGMENT-->
+    <string name="description_statistics">The graph shows you the progress for the last 5 days, measured in percentage of completed program.</string>
+
+    <!--MAIN ACTIVITY-->
     <string name="channel_name">notify</string>
     <string name="channel_description">notification</string>
-    <string name="notification_message_body">Time to do your exercises!</string>
-    <string name="log_out">Log out</string>
     <string name="you_need_to_log_in_first">You need to log in first</string>
-    <string name="description_statistics">The graph shows you the last 5 days, measured in percentage of completed program.</string>
     <string name="log_in">Log in</string>
+    <string name="notification_message_body">Time to do your exercises!</string>
     <string name="exercise_where_ever_you_are">Exercise where ever you are!</string>
-    <string name="done">DONE</string>
     <string name="today_progress_drawer">Today progress:</string>
-    <string name="trophy_text">God job!  You did all your exercises today!</string>
+
+    <!--THEORY FRAGMENT-->
     <string name="why">Why?</string>
     <string name="how">How?</string>
 
