--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,8 @@
     <!--THEORY FRAGMENT-->
     <string name="why">Why?</string>
     <string name="how">How?</string>
-
+    <string name="user_exists">Please choose another username</string>
+    <string name="enter_new_user_name">Please enter your new username</string>
+    <string name="why_text">Prolonged use of computer or activities with similar position such as driving often give rise to musculoskeletal symptoms. Headache and back pain are the most common symptoms. The back can easily support the weight of your head and neck when your posture is tall and erect, but if your head leans forward in a 45 degree angle, your neck has to work like a lever lifting a heavy object.  Muscles need movement, contraction and relaxation in order to be free from tension and well vascularized.</string>
+    <string name="how_text">Take breaks every hour and do the exercises to release tensions and give oxygen to the muscles</string>
 </resources>
